# monitr

./: .gitignore  .mailmap  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: app.rs  config.rs  error.rs  filter.rs  format.rs  history.rs  inspect.rs  main.rs  output.rs  ports.rs  process_record.rs  sampler.rs  terminal_backend.rs  ui.rs
