[package]
name = "rmon"
version = "0.1.0"
edition = "2024"
authors = ["Milo Evans"]
description = "A lightweight macOS activity monitor TUI built with Rust and Ratatui"
repository = "https://github.com/milobeans/rmon"
license = "MIT"
keywords = ["macos", "tui", "monitor", "ratatui", "processes"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
humansize = "2.1.3"
libc = "0.2.186"
ratatui = "0.30.0"
sysinfo = "0.38.4"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = true
