[package]
name = "monitr"
version = "0.1.1"
edition = "2024"
authors = ["Milo Evans"]
description = "A lightweight macOS activity monitor TUI built with Rust and Ratatui"
repository = "https://github.com/milobeans/monitr"
license = "MIT"
keywords = ["macos", "tui", "monitor", "ratatui", "processes"]
categories = ["command-line-utilities"]

[[bin]]
name = "monitr"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
libc = "0.2.186"
ratatui-core = { version = "0.1.0", features = ["std"] }
ratatui-widgets = { version = "0.3.0", default-features = false }
sysinfo = { version = "0.38.4", default-features = false, features = [
    "disk",
    "network",
    "system",
    "user",
] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = true
